vulnops-intelligence-platform/infra/k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: vulnops-api
  namespace: vulnops
  labels:
    app.kubernetes.io/name: vulnops-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vulnops-api
  ports:
    - name: http
      port: 8000
      targetPort: http
